grammar.js
    program: ($) =>
      seq(
        repeat(seq($.use, optional(";"))),
        repeat($._declaration),
      ),

    _declaration: ($) =>
      choice(
        $.function_declaration,
        $.enum_definition,
        $.module_declaration,
        $.type_alias_declaration,
        $.trait_definition,
        $.trait_implementation,
        $.effect_definition,
      ),

    //////// MODULES ////////////
    enum_definition: ($) =>
      seq(
        optional($.annotations),
        optional($.modifiers),
        "enum",
        field("name", $._uppercase_name),
        optional(
          field(
            "type_parameters",
            $.type_parameters,
          ),
        ),
        optional(
          field("traits", $.with_clause),
        ),
        field(
          "constructors",
          $.constructors,
        ),
      ),
    with_clause: ($) =>
      seq("with", one_or_more($._type)),
    constructors: ($) =>
      seq(
        "{",
        one_or_more_optionally(
          $.constructor,
        ),
        "}",
      ),
    constructor: ($) =>
      seq(
        "case",
        $._uppercase_name,
        optional(
          field(
            "parameters",
            $.constructor_parameters,
          ),
        ),
      ),
    constructor_parameters: ($) =>
      seq("(", one_or_more($._type), ")"),

    //////// FUNCTIONS //////////
    function_declaration: ($) =>
      seq(
        $._function_definition,
        "=",
        field("body", $.expressions),
      ),
    function_definition: ($) =>
      $._function_definition,
    _function_definition: ($) =>
      seq(
        optional($.annotations),
        optional($.modifiers),
        "def",
        field("name", $._function_name),
        optional(
          field(
            "type_parameters",
            $.type_parameters,
          ),
        ),
        field("parameters", $.parameters),
        optional(
          seq(
            ":",
            field("return_type", $._type),
          ),
        ),
        optional(
          seq(
            "\\",
            field("effects", $.effects),
          ),
        ),
        optional(
          field(
            "with_clause",
            $.with_clause,
          ),
        ),
        optional(
          field(
            "where_clause",
            $.where_clause,
          ),
        ),
      ),
    where_clause: ($) =>
      seq(
        "where",
        field("type", $._type),
        "~",
        field("constraint", $._type),
      ),
    parameters: ($) =>
      seq(
        "(",
        zero_or_more($.parameter),
        ")",
      ),
    parameter: ($) =>
      seq(
        field("name", $._lowercase_name),
        ":",
        field("type", $._type),
      ),
    arguments: ($) =>
      seq(
        "(",
        zero_or_more(
          choice($._expression, $.ignored),
        ),
        ")",
      ),

    /////// EFFECTS ///////
    effects: ($) =>
      prec(
        PREC.effects,
        one_or_more($._effect),
      ),
    _effect: ($) =>
      choice(
        alias(
          $.uppercase_name,
          $.identifier,
        ),
        alias(
          $.lowercase_name,
          $.polymorphic_identifier,
        ),
        $.effect_group,
        $.binary_effect,
        $.unary_effect,
        $.effect_field,
      ),
    unary_effect: ($) =>
      prec(PREC.unary, seq("~", $._effect)),
    binary_effect: ($) =>
      prec.left(
        seq(
          $._effect,
          alias(
            choice("+", "-", "&"),
            $.operator,
          ),
          $._effect,
        ),
      ),
    effect_group: ($) =>
      choice(
        seq(
          "{",
          one_or_more($._effect),
          "}",
        ),
        seq("(", $._effect, ")"),
      ),
    effect_definition: ($) =>
      seq(
        optional($.modifiers),
        "eff",
        field("effect", $._uppercase_name),
        field(
          "body",
          alias(
            $._effect_template_body,
            $.template_body,
          ),
        ),
      ),
    _effect_template_body: ($) =>
      seq(
        "{",
        repeat($.function_definition),
        "}",
      ),
    effect_block: ($) =>
      seq(
        "run",
        $.block,
        repeat1($.effect_handler),
      ),
    effect_handler: ($) =>
      seq(
        "with",
        choice(
          seq(
            "handler",
            field(
              "effect",
              $._uppercase_name,
            ),
            field("body", $.handler_body),
          ),
          field(
            "effect",
            choice(
              $.field,
              $._lowercase_name,
            ),
          ),
        ),
      ),
    handler_body: ($) =>
      seq(
        "{",
        repeat1(
          alias(
            $._handler_function,
            $.function_declaration,
          ),
        ),
        "}",
      ),
    _handler_function: ($) =>
      seq(
        $._handler_function_definition,
        "=",
        field("body", $.expressions),
      ),
    type_parameters: ($) =>
      seq(
        "[",
        zero_or_more($.type_parameter),
        "]",
      ),
    type_parameter: ($) =>
      seq(
        field("name", $._lowercase_name),
        optional(
          seq(":", field("kind", $.kind)),
        ),
      ),
    kind: ($) =>
      choice(
        "Type",
        "RecordRow",
        "SchemaRow",
      ),

    /////// ANNOTATIONS ///////
    annotations: ($) =>
      repeat1($.annotation),
    annotation: ($) =>
      /@[a-zA-Z][a-zA-Z0-9_]*/,

    /////// EXPRESSIONS ///////
    _stmt: ($) =>
      seq(
        optional(seq($._stmt, ";")),
        $._expression,
      ),
    block: ($) => seq("{", $._stmt, "}"),
    expressions: ($) => prec(1, $._stmt),
    _expression: ($) =>
      choice(
        $._literal,
        $._variable_name,
        $.block,
        $.if,
        $.match,
        $.for_monadic,
        $.for_applicative,
        $.foreach,
        $.let,
        $.field,
        $.ref,
        $.deref,
        $.assign,
        $.region,
        $.unary,
        $.binary,
        $.group,
        $.call_expression,
        $.object_constructor,
        $.tuple,
        $.effect_block,
        $.lambda,
        $.spawn,
        $.select,
        $.parallel,
        $.constraints,
        $.inject,
        $.query,
        $.solve,
        $.type_ascription,
      ),

    ///////// CONTROL STRUCTURES /////////////
    _pattern: ($) =>
      choice(
        $.ignored,
        $._literal,
        $._variable_name,
        $._uppercase_name,
        alias(
          $.pattern_constructor,
          $.constructor,
        ),
        alias($._pattern_tuple, $.tuple),
      ),
    field: ($) =>
      prec(
        PREC.field,
        seq(
          choice(
            $._lowercase_name,
            $._uppercase_name,
            $.field,
          ),
          ".",
          choice(
            $._uppercase_name,
            $._lowercase_name,
            $._greek_name,
            $._math_name,
            $._operator_name,
          ),
        ),
      ),
    let: ($) =>
      seq(
        "let",
        $._pattern,
        optional(seq(":", $._type)),
        "=",
        choice(
          $._expression,
          alias(
            $._type_ascription,
            $.type_ascription,
          ),
        ),
      ),
    call_expression: ($) =>
      prec(
        PREC.call,
        seq(
          field(
            "function",
            choice(
              $._function_name,
              $._uppercase_name,
              $._expression,
            ),
          ),
          field("arguments", $.arguments),
        ),
      ),
    _type_ascription: ($) =>
      prec(
        PREC.type_ascription,
        seq($._expression, ":", $._type),
      ),

    /////////// OPERATORS /////////////
    binary: ($) =>
      choice(
        prec.left(
          PREC.user_defined_op,
          seq(
            $._expression,
            alias(
              $.operator_name,
              $.user_operator,
            ),
            $._expression,
          ),
        ),
        prec.left(
          PREC.composition,
          seq(
            $._expression,
            alias(
              "<+>",
              $.operator_identifier,
            ),
            $._expression,
          ),
        ),
        prec.left(
          PREC.infix_function,
          seq(
            $._expression,
            $.infix_function,
            $._expression,
          ),
        ),
        prec.left(
          PREC.or,
          seq(
            $._expression,
            alias(
              "or",
              $.operator_identifier,
            ),
            $._expression,
          ),
        ),
        prec.left(
          PREC.and,
          seq(
            $._expression,
            alias(
              "and",
              $.operator_identifier,
            ),
            $._expression,
          ),
        ),
        prec.left(
          PREC.bitwise_or,
          seq(
            $._expression,
            alias(
              "|||",
              $.operator_identifier,
            ),
            $._expression,
          ),
        ),
        prec.left(
          PREC.bitwise_xor,
          seq(
            $._expression,
            alias(
              "^^^",
              $.operator_identifier,
            ),
            $._expression,
          ),
        ),
        prec.left(
          PREC.bitwise_and,
          seq(
            $._expression,
            alias(
              "&&&",
              $.operator_identifier,
            ),
            $._expression,
          ),
        ),
        prec.left(
          PREC.equality,
          seq(
            $._expression,
            alias(
              choice("==", "!=", "<=>"),
              $.operator_identifier,
            ),
            $._expression,
          ),
        ),
        prec.left(
          PREC.comparison,
          seq(
            $._expression,
            alias(
              choice("<=", ">=", "<", ">"),
              $.operator_identifier,
            ),
            $._expression,
          ),
        ),
        prec.left(
          PREC.bitwise_shift,
          seq(
            $._expression,
            alias(
              choice(">>>", "<<<"),
              $.operator_identifier,
            ),
            $._expression,
          ),
        ),
        prec.left(
          PREC.multiply,
          seq(
            $._expression,
            alias(
              choice(
                "**",
                "*",
                "/",
                "mod",
                "rem",
              ),
              $.operator_identifier,
            ),
            $._expression,
          ),
        ),
        prec.left(
          PREC.add,
          seq(
            $._expression,
            alias(
              choice("+", "-"),
              $.operator_identifier,
            ),
            $._expression,
          ),
        ),
        prec.left(
          PREC.cons,
          seq(
            $._expression,
            alias(
              "::",
              $.operator_identifier,
            ),
            $._expression,
          ),
        ),
        prec.left(
          PREC.append,
          seq(
            $._expression,
            alias(
              ":::",
              $.operator_identifier,
            ),
            $._expression,
          ),
        ),
      ),
    _type: ($) =>
      choice(
        $.type_primitive,
        $.type_tuple,
        $.type_function,
        $.type_record,
        $._type_identifier,
        $.type_field,
        $.type_constraint,
      ),
    type_primitive: ($) =>
      seq(
        $._type_primitive,
        optional($.type_arguments),
      ),
    _type_primitive: ($) =>
      choice(
        "Unit",
        "Bool",
        "Char",
        "Float32",
        "Float64",
        "Int8",
        "Int16",
        "Int32",
        "Int64",
        "String",
        "BigInt",
        "BigDecimal",
        "Region",
        "Void",
      ),
    _type_identifier: ($) =>
      choice(
        alias(
          $.lowercase_name,
          $.polymorphic_identifier,
        ),
        $.type,
      ),
    type_field: ($) =>
      prec(
        PREC.field,
        seq(
          choice($.type, $.type_field),
          ".",
          $.type,
        ),
      ),
    type: ($) =>
      seq(
        $._uppercase_name,
        optional($.type_arguments),
      ),
    type_arguments: ($) =>
      seq("[", one_or_more($._type), "]"),
    type_function: ($) =>
      prec.left(
        PREC.type_function,
        seq(
          field("parameters", $._type),
          "->",
          field("return_type", $._type),
          optional(
            seq(
              "\\",
              field("effects", $.effects),
            ),
          ),
        ),
      ),
    type_alias_declaration: ($) =>
      seq(
        token("type alias"),
        $._type,
        "=",
        $._type,
      ),
    type_constraint: ($) =>
      seq(
        "#{",
        field(
          "tables",
          alias(
            $._type_tables,
            $.table_list,
          ),
        ),
        optional(
          seq(
            "|",
            field(
              "variable",
              $._type_identifier,
            ),
          ),
        ),
        "}",
      ),
    _type_tables: ($) =>
      one_or_more(
        alias($._type_table, $.table),
      ),
    unit: ($) => prec(100, seq("(", ")")),
    integer: ($) =>
      /\d+(i8|i16|i32|i64|ii)?/,
    boolean: ($) => choice("true", "false"),
    string: ($) =>
      seq(
        '"',
        repeat(
          choice(
            $._string_fragment,
            $._escape_sequence,
            $._interpolation,
          ),
        ),
        '"',
      ),
    constraints: ($) =>
      seq(
        "#{",
        repeat(choice($.fact, $.rule)),
        "}",
      ),
    fact: ($) => seq($._fact_inner, "."),
    _fact_inner: ($) =>
      seq(
        optional(alias("not", $.unary)),
        field("table", $._uppercase_name),
        field("terms", $.terms),
      ),
    terms: ($) =>
      seq(
        "(",
        zero_or_more_by(
          choice($._expression, $.ignored),
          /[;,]/,
        ),
        ")",
      ),
    rule: ($) =>
      seq(
        field(
          "head",
          alias($._fact_inner, $.fact),
        ),
        ":-",
        field(
          "body",
          alias($.facts, $.rule_body),
        ),
        ".",
      ),
    table_list: ($) =>
      prec.left(one_or_more($.table)),
    table: ($) =>
      seq(
        $._uppercase_name,
        "/",
        alias($.integer, $.arity),
      ),
    _string_fragment: ($) =>
      token.immediate(prec(1, /[^"\\$]+/)),
    _escape_sequence: ($) =>
      choice(
        prec(
          2,
          token.immediate(
            seq("\\", /[^abfnrtvxu'\"\\\?]/),
          ),
        ),
        prec(1, $.escape_sequence),
      ),
    _interpolation: ($) =>
      choice(
        prec(2, $.interpolation),
        prec(1, token.immediate("$")),
      ),
    interpolation: ($) =>
      seq(
        token.immediate("${"),
        $._stmt,
        "}",
      ),
    modifiers: ($) => repeat1($.modifier),
    modifier: ($) =>
      choice(
        "pub",
        "inline",
        "lawful",
        "opaque",
        "override",
        "sealed",
      ),

    ignored: ($) => "_",

    /////// NAMES ////////
    _uppercase_name: ($) =>
      alias($.uppercase_name, $.identifier),
    _lowercase_name: ($) =>
      alias($.lowercase_name, $.identifier),
    _greek_name: ($) =>
      alias($.greek_name, $.identifier),
    _math_name: ($) =>
      alias($.math_name, $.identifier),
    _operator_name: ($) =>
      alias($.operator_name, $.identifier),
