test/corpus/effects.txt
=====
effect definition
=====

eff DivByZero {
  def divByZero(): Void
}

---

(program
  (effect_definition
    (identifier)
    (template_body
      (function_definition
        (identifier)
        (parameters)
        (type_primitive)))))

=====
effect handler
=====


def main(): Unit \ IO = 
    run {
        println(divide(3, 2));
        println(divide(3, 0))
    } with handler DivByZero {
        def divByZero(_resume) = println("Oops: Division by Zero!")
    }

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (effects
      (identifier))
    (expressions
      (effect_block
        (block
          (call_expression
            (identifier)
            (arguments
              (call_expression
                (identifier)
                (arguments
                  (integer)
                  (integer)))))
          (call_expression
            (identifier)
            (arguments
              (call_expression
                (identifier)
                (arguments
                  (integer)
                  (integer))))))
        (effect_handler
          (identifier)
          (handler_body
            (function_declaration
              (identifier)
              (parameters
                (identifier))
              (expressions
                (call_expression
                  (identifier)
                  (arguments
                    (string)))))))))))

=====
chained effect handlers
=====

def main(): Unit \ IO = 
    run {
        greeting()
    } with handler Ask {
        def ask(_, resume) = resume("Bond, James Bond")
    } with handler Say {
        def say(s, resume) = { println(s); resume() }
    }

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (effects
      (identifier))
    (expressions
      (effect_block
        (block
          (call_expression
            (identifier)
            (arguments)))
        (effect_handler
          (identifier)
          (handler_body
            (function_declaration
              (identifier)
              (parameters
                (ignored)
                (resume))
              (expressions
                (call_expression
                  (identifier)
                  (arguments
                    (string)))))))
        (effect_handler
          (identifier)
          (handler_body
            (function_declaration
              (identifier)
              (parameters
                (identifier)
                (resume))
              (expressions
                (block
                  (call_expression
                    (identifier)
                    (arguments
                      (identifier)))
                  (call_expression
                    (identifier)
                    (arguments)))))))))))

=====
weird effect signature 1
=====

def effectsWeird(f: Unit -> a \ ef1, g: a -> b \ ef2): b \ {{ef1 + ef2}, (IO + (~ef1 - ~ef2))} =
    println("IO usage");
    g(f())
	
---

(program
  (function_declaration
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (type_function
          parameters: (type_primitive)
          return_type: (polymorphic_identifier)
          effects: (effects
            (polymorphic_identifier))))
      (parameter
        name: (identifier)
        type: (type_function
          parameters: (polymorphic_identifier)
          return_type: (polymorphic_identifier)
          effects: (effects
            (polymorphic_identifier)))))
    return_type: (polymorphic_identifier)
    effects: (effects
      (effect_group
        (effect_group
          (binary_effect
            (polymorphic_identifier)
            (operator)
            (polymorphic_identifier)))
        (effect_group
          (binary_effect
            (identifier)
            (operator)
            (effect_group
              (binary_effect
                (unary_effect
                  (polymorphic_identifier))
                (operator)
                (unary_effect
                  (polymorphic_identifier))))))))
    body: (expressions
      (call_expression
        function: (identifier)
        arguments: (arguments
          (string)))
      (call_expression
        function: (identifier)
        arguments: (arguments
          (call_expression
            function: (identifier)
            arguments: (arguments)))))))

=====
weird effect signature 2
=====

def effectsWeird2(f: Unit -> a \ ef1, g: a -> b \ ef2): b \ {{ef1 + ef2}, {IO, (~ef1 - ~ef2)}} =
    println("IO usage");
    g(f())

---

(program
  (function_declaration
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (type_function
          parameters: (type_primitive)
          return_type: (polymorphic_identifier)
          effects: (effects
            (polymorphic_identifier))))
      (parameter
        name: (identifier)
        type: (type_function
          parameters: (polymorphic_identifier)
          return_type: (polymorphic_identifier)
          effects: (effects
            (polymorphic_identifier)))))
    return_type: (polymorphic_identifier)
    effects: (effects
      (effect_group
        (effect_group
          (binary_effect
            (polymorphic_identifier)
            (operator)
            (polymorphic_identifier)))
        (effect_group
          (identifier)
          (effect_group
            (binary_effect
              (unary_effect
                (polymorphic_identifier))
              (operator)
              (unary_effect
                (polymorphic_identifier)))))))
    body: (expressions
      (call_expression
        function: (identifier)
        arguments: (arguments
          (string)))
      (call_expression
        function: (identifier)
        arguments: (arguments
          (call_expression
            function: (identifier)
            arguments: (arguments)))))))

=====
weird effect signature 3
=====

def effectsWeird3(f: Unit -> a \ ef1, g: a -> b \ ef2): b \ ef1 + ef2 =
    g(f())

---

(program
  (function_declaration
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (type_function
          parameters: (type_primitive)
          return_type: (polymorphic_identifier)
          effects: (effects
            (polymorphic_identifier))))
      (parameter
        name: (identifier)
        type: (type_function
          parameters: (polymorphic_identifier)
          return_type: (polymorphic_identifier)
          effects: (effects
            (polymorphic_identifier)))))
    return_type: (polymorphic_identifier)
    effects: (effects
      (binary_effect
        (polymorphic_identifier)
        (operator)
        (polymorphic_identifier)))
    body: (expressions
      (call_expression
        function: (identifier)
        arguments: (arguments
          (call_expression
            function: (identifier)
            arguments: (arguments)))))))

=====
pre-defined effect handler
=====

def main(): Unit \ IO =
    run {
        let timestamp = Clock.currentTime(TimeUnit.Milliseconds);
        println("${timestamp} ms since the epoc")
    } with Clock.runWithIO

---

(program
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    return_type: (type_primitive)
    effects: (effects
      (identifier))
    body: (expressions
      (effect_block
        (block
          (let
            (identifier)
            (call_expression
              function: (field
                (identifier)
                (identifier))
              arguments: (arguments
                (field
                  (identifier)
                  (identifier)))))
          (call_expression
            function: (identifier)
            arguments: (arguments
              (string
                (interpolation
                  (identifier))))))
        (effect_handler
          effect: (field
            (identifier)
            (identifier)))))))

=====
user-defined effect handler
=====

def main(): Unit \ IO =
    run {
        let result = Amb.flip();
        println("You flipped: ${result}")
    } with runWithIO

---

(program
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    return_type: (type_primitive)
    effects: (effects
      (identifier))
    body: (expressions
      (effect_block
        (block
          (let
            (identifier)
            (call_expression
              function: (field
                (identifier)
                (identifier))
              arguments: (arguments)))
          (call_expression
            function: (identifier)
            arguments: (arguments
              (string
                (interpolation
                  (identifier))))))
        (effect_handler
          effect: (identifier))))))
