test/corpus/enums.txt
=====
basic
=====

enum MyEnum {
  case Empty,
  case Full(Int32)
}

---

(program
  (enum_declaration
    (identifier)
    (constructors
      (constructor
        (identifier))
      (constructor
        (identifier)
        (constructor_parameters
          (type_primitive))))))

=====
polymorphic
=====

enum MyEnum[a] {
  case Empty,
  case Full(a)
}

---

(program
  (enum_declaration
    (identifier)
    (type_parameters
      (type_parameter 
        (identifier)))
    (constructors
      (constructor
        (identifier))
      (constructor
        (identifier)
        (constructor_parameters
          (polymorphic_identifier))))))

=====
enum constructors
=====

def main(): Result[String, Int32] = Ok(123)

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type
      (identifier)
      (type_arguments
        (type_primitive)
        (type_primitive)))
    (call_expression
      (identifier)
      (arguments
        (integer)))))

=====
enum trait derivation
=====

enum Shape with Eq, Order {
    case Circle(Int32)
    case Square(Int32)
    case Rectangle(Int32, Int32)
}

---

(program
  (enum_declaration
    (identifier)
    (trait)
    (trait)
    (constructors
      (constructor
        (identifier)
        (constructor_parameters
          (type_primitive)))
      (constructor
        (identifier)
        (constructor_parameters
          (type_primitive)))
      (constructor
        (identifier)
        (constructor_parameters
          (type_primitive)
          (type_primitive))))))
